--- a/accounts-service.yml
+++ b/accounts-service.yml
@@ -8,6 +8,21 @@ spring:
     mongodb:
       uri: mongodb://localhost:27017/accountsdb
 
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+
 logging:
   level:
     root: INFO
+    com.example.accounts: DEBUG
+
+springdoc:
+  paths-to-match: /**
+  default-produces-media-type: application/json
+  swagger-ui:
+    path: /swagger-ui.html
+    enabled: true
+  api-docs:
+    path: /v3/api-docs
