--- a/customer-service.yml
+++ b/customer-service.yml
@@ -4,6 +4,8 @@ server:
 spring:
   application:
     name: customer-service
+  config:
+    import: optional:configserver:http://localhost:8888
   data:
     mongodb:
       uri: mongodb://localhost:27017/customersdb
