--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -1,16 +1,40 @@
 server:
   port: 8080
 
-
 spring:
   application:
     name: api-gateway
   cloud:
     gateway:
-      discovery:
-        locator:
-          enabled: true
-          lower-case-service-id: false
+      routes:
+        - id: customer-service
+          uri: lb://customer-service
+          predicates:
+            - Path=/customer-service/**
+        - id: accounts-service
+          uri: lb://accounts-service
+          predicates:
+            - Path=/accounts-service/**
+        - id: credits-service
+          uri: lb://credits-service
+          predicates:
+            - Path=/credits-service/**
+        - id: transactions-service
+          uri: lb://transactions-service
+          predicates:
+            - Path=/transactions-service/**
+        - id: reports-service
+          uri: lb://reports-service
+          predicates:
+            - Path=/reports-service/**
+        - id: cards-service
+          uri: lb://cards-service
+          predicates:
+            - Path=/cards-service/**
+        - id: auth-service
+          uri: lb://auth-service
+          predicates:
+            - Path=/auth-service/**
     config:
       enabled: true
     main:
@@ -23,28 +47,3 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
-
-#zuul:
-#  routes:
-#    customer-service:
-#      path: /customer-service/**
-#      service-id: customer-service
-#      accounts-service:
-#        path: /accounts-service/**
-#        service-id: accounts-service
-#      credits-service:
-#        path: /credits-service/**
-#        service-id: credits-service
-#      transactions-service:
-#        path: /transactions-service/**
-#        service-id: transactions-service
-#      reports-service:
-#        path: /reports-service/**
-#        service-id: reports-service
-#      cards-service:
-#        path: /cards-service/**
-#        service-id: cards-service
-#      auth-service:
-#        path: /auth-service/**
-#        service-id: auth-service
-
