--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -35,6 +35,10 @@ spring:
           uri: lb://AUTH-SERVICE
           predicates:
             - Path=/auth-service/**
+        - id: bootcoin-service
+          uri: lb://BOOTCOIN-SERVICE
+          predicates:
+              - Path=/bootcoin-service/**
     config:
       enabled: true
     main:
