--- a/application.yml
+++ b/application.yml
@@ -6,3 +6,11 @@ spring:
       retry:
         max-attempts: 6
         initial-interval: 1000
+
+kafka:
+  bootstrap-servers: localhost:9092
+
+redis:
+  host: localhost
+  port: 6379
+  timeout: 2000
