--- a/credits-service.yml
+++ b/credits-service.yml
@@ -7,6 +7,11 @@ spring:
   data:
     mongodb:
       uri: mongodb://localhost:27017/creditsdb
+  kafka:
+    bootstrap-servers: localhost:9092
+    redis:
+      host: localhost
+      port: 6379
 
 eureka:
   client:
