--- a/customer-service.yml
+++ b/customer-service.yml
@@ -1,16 +1,18 @@
 server:
   port: 8081
 
-customer-service:
-  cards-service-url: http://localhost:8086/api/cards
-  accounts-service-url: http://localhost:8082/api/accounts
-
 spring:
   application:
     name: customer-service
   data:
     mongodb:
       uri: mongodb://localhost:27017/customersdb
+  cloud:
+    config:
+      uri: http://localhost:8888
+  redis:
+    host: localhost
+    port: 6379
   kafka:
     bootstrap-servers: localhost:9092
     redis:
@@ -21,6 +23,16 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
+
+customer-service:
+  cards-service-url: http://localhost:8086/api/cards
+  accounts-service-url: http://localhost:8082/api/accounts
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 
 logging:
   level:
