--- a/bootcoin-service.yml
+++ b/bootcoin-service.yml
@@ -4,14 +4,18 @@ server:
 spring:
   application:
     name: bootcoin-service
+  cloud:
+    config:
+      uri: http://localhost:8888
   data:
     mongodb:
-      uri: mongodb://localhost:27017/bootcoindb
-  kafka:
-    bootstrap-servers: localhost:9092
-  redis:
-    host: localhost
-    port: 6379
+      uri: mongodb://localhost:27017/bootcoin-db
+kafka:
+  bootstrap-servers: localhost:9092
+
+redis:
+  host: localhost
+  port: 6379
 
 eureka:
   client:
